2012-03-06  Thomas Renninger <trenn@suse.de>

	* contrib/Makefile.am, Makefile.am, doc/Makefile.am: Fix docdir
	usage for newer autotools.
	
2012-03-06  Albert Chu <chu11@llnl.gov>

 	* Support set sensor reading and event status command.

2012-03-05  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-comp-code-spec.h: Add
	macros for completion code ranges.

	* libfreeipmi/util/ipmi-error-util.c
	(ipmi_completion_code_strerror_r): Use new macros.
	
2012-03-01  Albert Chu <chu11@llnl.gov>

	* ipmipower/ipmipower_connection.c (_connection_setup): Support
	ability to specify alternate port in hostname argument.
	
2012-03-01  Albert Chu <chu11@llnl.gov>

	Merge altport branch. 

	* libfreeipmi/api/ipmi-api.c (_setup_hostname),
	libipmiconsole/ipmiconsole_defs.h, libipmiconsole/ipmiconsole.c
	(ipmiconsole_ctx_create), libipmiconsole/ipmiconsole_ctx.h
	(ipmiconsole_ctx_config_setup), libipmiconsole/ipmiconsole_ctx.c
	(ipmiconsole_ctx_config_setup), ipmidetectd/ipmidetectd_loop.c
	(_nodes_setup): Support ability to specify alternate port in
	hostname argument or host config.

	* libipmimonitoring/ipmi_monitoring_ipmi_communication.c
	(_ipmi_1_5_init, _ipmi_2_0_init, _outofband_init): Let various
	error checking fall through to lower level APIs.
	
	* man/manpage-common-outofband-hostname.man,
	man/manpage-common-outofband-hostname-hostranged.man,
	man/ipmidetectd.conf.5.pre.in: Update manpages appropriately.

2012-03-01  Albert Chu <chu11@llnl.gov>
	
	* libipmimonitoring/ipmi_monitoring_ipmi_communication.c
	(_ipmi_1_5_init, _ipmi_2_0_init): Properly return connection
	timeout error on connection timeout.

	* man/ipmidetectd.conf.5.pre.in: Fix some English.
	
2012-03-01  Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/, libipmiconsole/: Support Cipher Suite 15,
	16, and 17.

2012-02-26  Yaroslav Halchenko <debian@onerussian.com>

	* man/ipmi-chassis.8.pre.in: Fix typos.
	
2012-02-24  Albert Chu <chu11@llnl.gov>

	Merge selreservation branch
